# valkyrie.rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  legions.von  package.json  pnpm-lock.yaml  readme.md  rustfmt.toml
projects/legion/: Cargo.toml  readme.md
projects/legion/src/: lib.rs  main.rs  manifest.rs  planner.rs  readme.md
projects/legion/src/cmds/: bootstrap.rs  mod.rs  readme.md
projects/legion/tests/: cmds_bootstrap.rs  cmds_build.rs  cmds_run.rs  cmds_spy_clr.rs  cmds_spy_pe_parser.rs  cmds_spy_wasm.rs  manifest.rs  planner.rs
projects/legion/tests/support/: mod.rs
projects/nyar/: Cargo.toml  readme.md
projects/nyar-analyzer/: Cargo.toml  readme.md
projects/nyar-analyzer/src/: lib.rs
projects/nyar-backend-clr/: Cargo.toml  readme.md
projects/nyar-backend-clr/src/: lib.rs
projects/nyar-backend-clr/src/hosting/: mod.rs
projects/nyar-backend-clr/src/msil/: method_body.rs  model.rs  writer.rs
projects/nyar-backend-clr/src/pe/: mod.rs  relocations.rs  tokens.rs
projects/nyar-backend-clr/tests/: msil_parser.rs  msil_writer.rs  pe.rs
projects/nyar-backend-jvm/: Cargo.toml  readme.md
projects/nyar-backend-jvm/src/: lib.rs
projects/nyar-backend-jvm/src/class/: mod.rs  readme.md
projects/nyar-backend-jvm/src/jar/: mod.rs  readme.md
projects/nyar-backend-jvm/tests/: bundle.rs  class.rs  jar.rs
projects/nyar-clr-backend/: Cargo.toml  readme.md
projects/nyar-clr-backend/src/: lib.rs  lowering.rs  pipeline.rs
projects/nyar-clr-backend/src/interop/: mod.rs
projects/nyar-clr-backend/src/metadata/: mod.rs
projects/nyar-clr-backend/src/msil/: method_body.rs  mod.rs  model.rs  parser.rs  readme.md
projects/nyar-clr-backend/src/pe/: imports.rs  metadata.rs  mod.rs  tokens.rs
projects/nyar-clr-backend/tests/: interop.rs  lowering.rs  msil_parser.rs  msil_writer.rs  pe.rs  runtime_acceptance.rs
projects/nyar-driver/: Cargo.toml  readme.md
projects/nyar-driver/src/: lib.rs  readme.md
projects/nyar-driver/src/families/: clr.rs  jvm.rs  mod.rs  native.rs  wasm.rs
projects/nyar-driver/tests/: families.rs
projects/nyar-jvm-backend/: Cargo.toml  readme.md
projects/nyar-jvm-backend/src/: lib.rs  lowering.rs
projects/nyar-jvm-backend/src/class/: mod.rs
projects/nyar-jvm-backend/tests/: class.rs  jar.rs
projects/nyar-types/: Cargo.toml  readme.md
projects/nyar-types/src/: lib.rs
projects/nyar-types/src/errors/: mod.rs
projects/nyar-types/src/source/: mod.rs
projects/nyar-types/src/symbols/: mod.rs
projects/nyar/src/: lib.rs  readme.md  target_profile.rs
projects/nyar/src/abstractions/: mod.rs  readme.md
projects/nyar/src/backends/: mod.rs  readme.md
projects/nyar/src/lanes/: mod.rs  readme.md
projects/nyar/src/packaging/: mod.rs  readme.md
projects/nyar/src/planning/: mod.rs  readme.md
projects/nyar/src/selection/: mod.rs  readme.md
projects/nyar/tests/: abstractions.rs  planning.rs  selection.rs  target_profile.rs
projects/nyar_valkyrie/: Cargo.toml  README.md
projects/nyar_valkyrie/src/: cache.rs  codegen.rs  config.rs  diagnostics.rs  error.rs  interpreter.rs  lib.rs  query.rs  runtime.rs
projects/valkyrie-ast/: Cargo.toml  package.json
projects/valkyrie-ast/src/: bindings.rs  lib.rs
projects/valkyrie-ast/src/control_flow/: mod.rs
projects/valkyrie-ast/src/expression_level/: mod.rs
projects/valkyrie-ast/src/helper/: mod.rs
projects/valkyrie-ast/src/package_level/: mod.rs
projects/valkyrie-ast/src/patterns/: display.rs  mod.rs
projects/valkyrie-ast/src/string_like/: mod.rs
projects/valkyrie-ast/src/traits/: mod.rs
projects/valkyrie-ast/wit/: world.wit
projects/valkyrie-compiler/: Cargo.toml  control_flow.next.md  readme.md
projects/valkyrie-compiler/src/: backend_boundary.rs  derive.rs  lib.rs  module.rs  nyar_bridge.rs  readme.md  symbols.rs
projects/valkyrie-compiler/src/hir/: ast_validation.rs  capture_analysis.rs  control_flow.next.md  control_flow_validation.rs  diagnostics.rs  mod.rs  nominal.rs  overload.rs  row.rs  trait_system.rs  (+2 more)
projects/valkyrie-compiler/tests/: fallthrough.rs  lir_runtime.rs  main.rs  match_patterns.rs  oop_mro.rs  overload_calls.rs  readme.md  region_control_lanes.rs  smoke.rs
projects/valkyrie-ffi/: Cargo.toml
projects/valkyrie-ffi/src/: lib.rs
projects/valkyrie-ffi/tests/: main.rs  main.vk
projects/valkyrie-interpreter/: Cargo.toml  readme.md
projects/valkyrie-interpreter/src/: lib.rs  readme.md  runtime.rs
projects/valkyrie-interpreter/tests/: interpreter.rs  interpreter_tests.rs  main.rs  readme.md  runtime_smoke.rs
projects/valkyrie-lir/: Cargo.toml
projects/valkyrie-lir/src/: lib.rs
projects/valkyrie-lsp/: Cargo.toml  README.md
projects/valkyrie-lsp/src/: backend.rs  capabilities.rs  diagnostics.rs  errors.rs  handlers.rs  legion.rs  lib.rs  main.rs  readme.md  state.rs  types.rs
projects/valkyrie-lsp/tests/: diagnostics.rs
projects/valkyrie-mir/: Cargo.toml
projects/valkyrie-mir/src/: lib.rs
projects/valkyrie-mir/tests/: component.wat  main.rs
projects/valkyrie-parser/: Cargo.toml  readme.md
projects/valkyrie-parser/benches/: parser_performance.rs
projects/valkyrie-parser/grammars/: valkyrie.ygg
projects/valkyrie-parser/src/: error_recovery.rs  lib.rs  parser.rs  readme.md
projects/valkyrie-parser/tests/: associated_type.rs  binary_expressions_test.rs  expression_statements_test.rs  function_calls_test.rs  identifiers_test.rs  inline-asm.md  integration_tests.rs  literals_test.rs  main.rs  match_patterns.rs  parenthesized_expressions_test.rs  parser.rs  pointer_type.rs  readme.md  row_type.rs  unary_expressions_test.rs  variable_declarations_test.rs  yield.vk
projects/valkyrie-types/: Cargo.toml  readme.md
projects/valkyrie-types/src/: bindings.rs  lib.rs  readme.md
projects/valkyrie-types/tests/: component.wat  main.rs  oop_parent_slots.rs  readme.md  witness.rs
projects/valkyrie-types/wit/: ast.wit  source-pool.wit  string-pool.wit  world.wit
projects/valkyrie-wit/: Cargo.toml  readme.md
projects/valkyrie-wit/src/: bindings.rs  lib.rs
projects/valkyrie-wit/wit/: world.wit
(+1028 files in other folders)
