[workspace]
resolver = "2"
members = [
    "projects/nyar",
    "projects/nyar-analyzer",
    "projects/nyar-optimizer",
    "projects/nyar-binary-format",
    "projects/nyar-driver",
    "projects/nyar-types",
    "projects/legion",
    "projects/von-parser",
    "projects/valkyrie-types",
    "projects/valkyrie-parser",
    "projects/valkyrie-compiler",
    "projects/nyar-backend-clr",
    "projects/nyar-backend-jvm",
    "projects/nyar-backend-wasi",
    "projects/nyar-backend-native",
    "projects/valkyrie-interpreter",
]
default-members = [
    "projects/legion",
    "projects/valkyrie-compiler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nyar Team"]
license = "MIT"
repository = "https://github.com/valkyrie-language/valkyrie.rs"

[workspace.dependencies]
nyar = { path = "projects/nyar" }
nyar-analyzer = { path = "projects/nyar-analyzer" }
nyar-optimizer = { path = "projects/nyar-optimizer" }
nyar-binary-format = { path = "projects/nyar-binary-format" }
nyar-driver = { path = "projects/nyar-driver" }
nyar-types = { path = "projects/nyar-types" }
von-parser = { path = "projects/von-parser" }
valkyrie-types = { path = "projects/valkyrie-types" }
valkyrie-parser = { path = "projects/valkyrie-parser" }
valkyrie-compiler = { path = "projects/valkyrie-compiler" }
valkyrie-interpreter = { path = "projects/valkyrie-interpreter" }
clr-backend = { package = "nyar-backend-clr", path = "projects/nyar-backend-clr" }
jvm-backend = { package = "nyar-backend-jvm", path = "projects/nyar-backend-jvm" }
wasi-backend = { package = "nyar-backend-wasi", path = "projects/nyar-backend-wasi" }
native-backend = { package = "nyar-backend-native", path = "projects/nyar-backend-native" }
miette = "7.6.0"
ordered-float = "5.3.0"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
url = "2.5.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tempfile = "3.27.0"
wasmtime = "46.0.1"

[profile.release]
lto = true
opt-level = "s"

[profile.dev]
incremental = false

[profile.test]
incremental = false
