[package]
name = "legion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
clr-backend = { workspace = true }
jvm-backend = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true }
nyar-driver = { workspace = true }
von-parser = { workspace = true }
valkyrie-compiler = { workspace = true }
valkyrie-interpreter = { workspace = true }
valkyrie-parser = { workspace = true }
valkyrie-types = { workspace = true }
wasi-backend = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wasi-backend = { workspace = true }
