[package]
name = "nyar-analyzer"
version.workspace = true
edition.workspace = true
description = "Frontend-agnostic analysis contracts for the Nyar backend platform"
authors.workspace = true
license.workspace = true

[dependencies]
nyar-optimizer = { workspace = true }
nyar-types = { workspace = true }
