[package]
name = "nyar-backend-clr"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
nyar = { workspace = true }
nyar-binary-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
