[package]
name = "nyar-clr-backend"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
nyar = { workspace = true }
nyar-binary-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
valkyrie-compiler = { workspace = true }
valkyrie-parser = { workspace = true }
valkyrie-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
