[package]
name = "nyar-driver"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

[dependencies]
clr-backend = { workspace = true }
jvm-backend = { workspace = true }
miette = { workspace = true }
native-backend = { workspace = true }
nyar = { workspace = true }
wasi-backend = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
