[package]
name = "nyar-jvm-backend"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
nyar = { workspace = true }
serde = { workspace = true }
valkyrie-compiler = { workspace = true }
valkyrie-types = { workspace = true }
zip = { workspace = true }
