[package]
name = "nyar-types"
version.workspace = true
edition.workspace = true
description = "Minimal shared types for the current Valkyrie workspace bootstrap path"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
