[package]
name = "nyar-types"
version.workspace = true
edition.workspace = true
 description = "Stable shared types for the generic Nyar backend platform"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
url = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
