[package]
name = "valkyrie-ast"
version = "0.1.12"
authors = ["Aster <192607617@qq.com>"]
description = "Strong typed abstract syntax tree of valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-ast"
keywords = ["valkyrie", "ast", "parser", "language"]
categories = ["data-structures"]
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
#pratt = "0.4.0"
deriver = "0.0.0"
serde = { version = "1.0.216", default-features = false, optional = true }
valkyrie-types = { workspace = true }
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[dependencies.pretty-print]
version = "0.1.9"
optional = true

[dependencies.lispify]
version = "0.1.0"
optional = true

[features]
default = []
std = ["pretty-print?/std", "serde?/std"]
serde = ["dep:serde", "serde/derive"]

#[package.metadata.docs.rs]
#all-features = true

[package.metadata.component.bindings]
derives = ["Hash"]

[package.metadata.component.target.dependencies]
"valkyrie:compiler-types" = { path = "../valkyrie-types/wit" }