[package]
name = "valkyrie-lir"
version = "0.0.7"
authors = ["Aster <192607617@qq.com>"]
description = "High level wasm builder"
repository = "https://github.com/oovm/dialect"
documentation = "https://docs.rs/valkyrie-lir"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
semver = "1.0.24"
indexmap = "2.7.0"
wast = "222.0.0"
string-pool = "0.2.1"
itertools = "0.13.0"
convert_case = "0.6.0"
dependent_sort = "0.2.0"
valkyrie-types = { workspace = true }



[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
