[package]
name = "valkyrie-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Nyar Team"]
description = "Language Server Protocol implementation for Valkyrie language using Nyar compiler infrastructure"
license = "MIT"
repository = "https://github.com/nyar-lang/nyar-vm"

[dependencies]
# LSP 核心依赖
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Nyar 编译器基础设施
nyar_valkyrie = { path = "../nyar_valkyrie" }
# 日志和错误处理
tracing = "0.1"
tracing-subscriber = "0.3"

# 异步和并发
dashmap = "5.0"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "valkyrie-lsp"
path = "src/main.rs"