[package]
name = "valkyrie-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Language Server Protocol implementation for Valkyrie language using Nyar compiler infrastructure"
license.workspace = true
repository = "https://github.com/nyar-lang/nyar-vm"

[dependencies]
valkyrie-compiler = { workspace = true }
valkyrie-types = { workspace = true, features = ["serde"] }
oak-valkyrie = { workspace = true, features = ["serde", "oak-pretty-print"] }
oak-lsp = { workspace = true }
oak-core = { workspace = true }
oak-vfs = { workspace = true }
oak-toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
async-recursion = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "valkyrie_lsp"
path = "src/lib.rs"
