[package]
name = "valkyrie-mir"
version = "0.0.8"
authors = ["Aster <192607617@qq.com>"]
description = "Shard types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
lasso = { version = "0.7.3", features = ["inline-more", "multi-threaded"] }
serde = "1.0.214"
im = "15.1.0"
ordered-float = "4.4.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }
smallvec = "2.0.0-alpha.7"
dashmap = "6.1.0"
indexmap = "2.6.0"
itertools = "0.13.0"
image = { version = "0.25.4", features = [] }
jupyter-types = "0.0.*"
convert_case = "0.6.0"
valkyrie-error = { workspace = true }
valkyrie-lir = { workspace = true }
valkyrie-parser = { workspace = true }
valkyrie-ast = { workspace = true }

[features]
default = []
