[package]
name = "valkyrie-parser"
version = "0.1.0"
edition = "2021"
authors = ["Nyar Team"]
description = "Valkyrie language parser built on nyar platform"
license = "MIT"
repository = "https://github.com/nyar-lang/nyar-vm"

[dependencies]
nyar-ast = { path = "../nyar-ast" }
nyar-core = { path = "../nyar-core" }
nyar-error = { path = "../nyar-error" }
chumsky = "0.9"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_performance"
harness = false