[package]
name = "valkyrie-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Valkyrie language parser and AST facade"
license.workspace = true
repository = "https://github.com/nyar-lang/valkyrie.rs"

[dependencies]
miette = { workspace = true }
serde = { workspace = true, optional = true }
valkyrie-types = { workspace = true }

[features]
default = []
serde = ["dep:serde", "valkyrie-types/serde"]

[dev-dependencies]
