[package]
name = "valkyrie-types"
version = "0.0.8"
authors = ["Aster <192607617@qq.com>"]
description = "Shard types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie.rs"
documentation = "https://docs.rs/valkyrie-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.196"
im = "15.1.0"
ordered-float = "4.2.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
smallvec = "2.0.0-alpha.3"
dashmap = "5.5.3"
indexmap = "2.2.3"
itertools = "0.13.0"
image = { version = "0.25.0", features = [] }
jupyter-types = "0.0.*"
convert_case = "0.6.0"
nyar-error = { workspace = true }

[dependencies.nyar-wasm]
version = "0.0.7"
#path = 'C:\Users\Dell\CLionProjects\nyar-vm\projects\nyar-wasm'

[dependencies.valkyrie-ast]
version = "0.1.*"
path = "../valkyrie-ast"

[dependencies.valkyrie-parser]
version = "0.2.*"
path = "../valkyrie-parser"



[features]
default = []
