[package]
name = "valkyrie-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core type system and HIR definitions for Valkyrie language"
license.workspace = true
repository = "https://github.com/valkyrie-language/valkyrie.rs"

[dependencies]
ordered-float = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, optional = true }
nyar-types = { workspace = true }

[features]
default = []
serde = ["dep:serde", "ordered-float/serde"]
